tests/rosetta/transpiler/Swift/ackermann-function-3.swift
// Generated by Mochi transpiler v0.10.39 on 2025-07-25 09:14:38 GMT+7
import Foundation

func pow_big(_ base: bigint, _ exp: Int) -> bigint {
    var result: bigint = 1
    var b: bigint = base
    var e = (exp as! Int)
    while (e > 0) {
        if ((e % 2) == 1) {
            result = (result * b)
        }
        b = (b * b)
        e = Int((e / 2))
    }
    return result
}
func bit_len(_ x: bigint) -> Int {
    var n: bigint = x
    var c = 0
    while (n > 0) {
        n = (n / 2)
        c = ((c + 1) as! Int)
    }
    return (c as! Int)
}
var err = ""
func ackermann2(_ m: bigint, _ n: bigint) -> bigint {
    if (err != "") {
        return 0
    }
    if (m <= 3) {
        let mi = (m as! Int)
        if (mi == 0) {
            return (n + 1)
        }
        if (mi == 1) {
            return (n + 2)
        }
        if (mi == 2) {
            return ((2 * n) + 3)
        }
        if (mi == 3) {
            let nb = Int(bit_len(n))
            if (nb > 64) {
                err = ((("A(m,n) had n of " + String(describing: nb)) + " bits; too large") as! String)
                return 0
            }
            let r = pow_big(2, (n as! Int))
            return ((8 * r) - 3)
        }
    }
    if (Int(bit_len(n)) == 0) {
        return ackermann2((m - 1), 1)
    }
    return ackermann2((m - 1), ackermann2(m, (n - 1)))
}
func show(_ m: Int, _ n: Int) {
    err = ""
    let res = ackermann2((m as! bigint), (n as! bigint))
    if (err != "") {
        print(((((("A(" + String(describing: m)) + ", ") + String(describing: n)) + ") = Error: ") + err))
        return
    }
    if (Int(bit_len(res)) <= 256) {
        print(((((("A(" + String(describing: m)) + ", ") + String(describing: n)) + ") = ") + String(describing: res)))
    } else {
        let s = String(describing: res)
        let pre = String(describing: String(Array((s as! String))[0..<20]))
        let suf = String(describing: String(Array((s as! String))[((Int(((s).count)) - 20) as! Int)..<Int(((s).count))]))
        print(((((((((("A(" + String(describing: m)) + ", ") + String(describing: n)) + ") = ") + String(describing: Int(((s).count)))) + " digits starting/ending with: ") + pre) + "...") + suf))
    }
}
func main() {
    _ = show(0, 0)
    _ = show(1, 2)
    _ = show(2, 4)
    _ = show(3, 100)
    _ = show(3, 1000000)
    _ = show(4, 1)
    _ = show(4, 2)
    _ = show(4, 3)
}
_ = main()
